--- a/views/show.ejs
+++ b/views/show.ejs
@@ -15,9 +15,9 @@
 					<%- blog.body %>
 				</p>
 			</div>
-			<a class="ui inverted yellow button" href="/blogs/<%=blog._id%>/edit">Edit</a>
+			<a class="ui yellow button" href="/blogs/<%=blog._id%>/edit">Edit</a>
 			<form id="delete" action="/blogs/<%=blog._id%>?_method=DELETE" method="POST">
-				<button type="submit" class="ui inverted red button ">DELETE</button>
+				<button type="submit" class="ui red button ">DELETE</button>
 			</form>
 		</div>
 	</div>
